# wrapper/src/api/providers/similarityThresholds/similarityThresholdsProvider.ts
@@ -9,6 +9,7 @@ import {
   GetSimilarityThresholdFunctionsRequest,
   SetSimilarityThresholdFunctionRequest,
   SimilarityThresholdFunction,
+  SimilarityThresholdFunctionDefinition,
   SimilarityThresholdFunctionId,
 } from '../../server/types';
 import { providers } from '..';
@@ -84,7 +85,7 @@ export class SimilarityThresholdsProvider {
     return databaseBackend().transaction(() => {
       providers.experiment.getExperiment(experimentId);
       const expression = functionToExpression(
-        similarityThresholdFunction,
+        (similarityThresholdFunction as unknown) as SimilarityThresholdFunctionDefinition,
         tables.experiment.experiment(experimentId).schema.columns
       );
       const [functionId] = tables.meta.similarityfunction.upsert([
@@ -107,14 +108,14 @@ export class SimilarityThresholdsProvider {
     return databaseBackend().transaction(() => {
       providers.experiment.getExperiment(experimentId);
       const expression = functionToExpression(
-        similarityThresholdFunction,
+        (similarityThresholdFunction as unknown) as SimilarityThresholdFunctionDefinition,
         tables.experiment.experiment(experimentId).schema.columns
       );
       tables.meta.similarityfunction.upsert([
         {
           experiment: experimentId,
-          expression,
           name: similarityThresholdFunction.name,
+          expression,
           id: functionId,
         },
       ]);
